 - Queries containing GRAPH clauses no longer unintentionally introduce a Product in some places
 - RDF/XML parser now correctly treats empty elements with rdf:datatype as literal properties rather than empty properties
 - SPARQL Query Parser now parses correctly if first item in the WHERE clause is a nested graph pattern
- Parsing
 - Notation 3 Parser supports Variables, @forSome and @forAll fully
 - All Parsers should now throw RdfParseExceptions when null Graphs, Stores, filenames, streams etc are passed as arguments
 - UriLoader Caching improved
  - URIs are santised when being cached
  - Data is cached under both the request and response URIS
  - Extracted existing private implementation into an interface so users can choose to slot in alternative caching mechanisms if desired
- Query Improvements
 - Leviathan SPARQL engine now operates over an ISparqlDataset which is an abstraction between the data and the
   SPARQL engine which allows for out of memory datasets to be queried and updated with Leviathan
 - Reverse Translation from ISparqlAlgebra to SparqlQuery
 - Optimisation for queries using ORDER BY under some circumstances
 - Improved SparqlParameterizedString
  - Can now set values for Variables which are substituted into the query when you call ToString()
  - Has own Namespace Map allowing prefixes to be registered programatically and have the code take care of generating the PREFIX declarations
- Update Improvements
 - WHERE clauses in Update Commands are now optimised
 - Added support for new features latest drafts of the SPARQL 1.1 Update specification
- ASP.Net Improvements
 - All HTTP Handlers output CORS headers so RDF/SPARQL content is accessible to JS clients
 - SparqlServer now supports omitting any of the processors (provided at least one is specified) so you can create
   endpoints with some features explicitly disabled

Removed
- Obsolete VDS.RDF.Web classes removed
- Removed obsolete methods related to Labyrinth SPARQL engine